[COMPLETED] created an array of words and an array of images. pick a random word, divide it into an array. Compare each input with the array of characters

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <body>
     <h1>Hangman Game</h1>
     <div class="container">
-        <div id="hangman__img"></div>
-        <div class="input__zone">
-            <div class="word"></div>
-            <div class="input"></div>
+        <div id="hangman__img">
+            <img id="img" src="/assets/images/hangman/hangman_1.png" alt="">
+        </div>
+        <div id="input__zone">
+            <div id="word"></div>
+            <input id="input" type="text" placeholder="Write a letter" autocomplete="off">
         </div>
     </div>
-
-
+<script src="/assets/JS/script.js"></script>
 </body>
 </html>
